<resources>
    <string name="app_name">NoteCraft</string>
    <string name="welcome_app_name">SuryaNotes Made with ❤️</string>
    <string name="new_note">New Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="title_hint">Title</string>
    <string name="content_hint">Start writing your note…</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="export_pdf">Export as PDF</string>
    <string name="add_background">Add Background Image</string>
    <string name="transparency">Transparency</string>
    <string name="bold">Bold</string>
    <string name="italic">Italic</string>
    <string name="no_notes">No notes yet.\nTap + to create one!</string>
    <string name="note_saved">Note saved</string>
    <string name="note_deleted">Note deleted</string>
    <string name="pdf_exported">PDF exported successfully</string>
    <string name="pdf_export_failed">Failed to export PDF</string>
    <string name="permission_needed">Storage permission is required</string>
    <string name="background_transparency">Background Opacity</string>
    <string name="remove_background">Remove Background</string>
    <string name="search_hint">Search notes…</string>
    <string name="delete_note_title">Delete Note</string>
    <string name="delete_confirm">Are you sure you want to delete this note?</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share</string>
    <string name="ok">OK</string>
    <string name="note_empty">Note is empty</string>
    <string name="image_load_failed">Failed to load image</string>
    <string name="share_pdf">Share PDF</string>
    <string name="pdf_saved_msg">PDF saved to Downloads.</string>
</resources>